crates/swc_css_parser/tests/errors/strings/newline/output.stderr
error: Expected Declaration value
 --> $DIR/tests/errors/strings/newline/input.css:2:11
  |
2 |     prop: "
  |           ^

error: Unexpected end of file

